Changelog
=========

1.0-SNAPSHOT (unreleased)
-------------------------

* Fixed type icon display.
  [thomasdesvenain]

* Add uuid to Alias objects and recatalog.
  This fixes duplicated UID with UUIDIndex on Plone 4.
  [vincentfretin]

* grok.CodeView doesn't exist anymore in recent five.grok, replaced by grok.View.
  [thomasdesvenain]

* Fix "AttributeError: 'Plone' object has no attribute 'prepareObjectTabs'" in
  Plone 4, disabling content views altogether.
  (Most notably, disabling the option to edit an Alias).
  [khink]

1.0a1 - 2009-08-02
------------------

* Initial release
